After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765319 - avdeinterlace: only green screen since 1.7.2
avdeinterlace: only green screen since 1.7.2
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
1.8.0
Other Linux
: Normal blocker
: 1.8.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-20 11:45 UTC by Thomas Löwe
Modified: 2016-04-20 12:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
avdeinterlace: Register all filters and only disable all except for yadif during compilation (1.71 KB, patch)
2016-04-20 12:30 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Thomas Löwe 2016-04-20 11:45:16 UTC
Looks like avdeinterlace is broken since the 1.7.2 release.

Using the following pipeline produces only an green screen and gives "libav :0:: No such filter: 'buffer'" error:

gst-launch-1.0 videotestsrc ! avdeinterlace mode=1 ! autovideosink

Compiling 1.7.1 and replace libgstlibav.so works here under debian testing.
Comment 1 Sebastian Dröge (slomo) 2016-04-20 12:30:53 UTC
Created attachment 326408 [details] [review]
avdeinterlace: Register all filters and only disable all except for yadif during compilation

Otherwise avdeinterlace won't find any filters, and we only use yadif in
there.
Comment 2 Sebastian Dröge (slomo) 2016-04-20 12:31:15 UTC
Attachment 326408 [details] pushed as ae3a80e - avdeinterlace: Register all filters and only disable all except for yadif during compilation