avdeinterlace: Register all filters and only disable all except for yadif during compilation

Otherwise avdeinterlace won't find any filters, and we only use yadif in
there.

https://bugzilla.gnome.org/show_bug.cgi?id=765319